# build parameters
[metadata]
name = entity_network
version = file: VERSION
author = Jason Cook
author_email = jasoncook1989@gmail.com
description = Entity resolution and network relationships.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwcook23/entity_network
project_urls =
    Bug Tracker = https://github.com/jwcook23/entity_network/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
[options]
packages = find:
# 3.8 for nsmlib as of 2022-04
python_requires = =3.8
install_requires =
    pandas
    scikit-learn
    nmslib
    networkx
include_package_data = True

# pyest parameters
[tool:pytest]
# output to console
log_cli = True
# ERROR level to exclude WARNING without logger setup
log_cli_level = ERROR

# flake8 parameters
[flake8]
ignore = 
    # E501: line too long (x > 79 characters)
    E501,
    # W503: line break before binary opertor : black prefers this style
    W503